added colour for logs